# Transmission-Remote-Slint

./: .SRCINFO  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  NOTES.md  PKGBUILD  PKGBUILD-bin  README.md  README.ru.md  README.ru.md.bak  SETUP_ARCH.md
src/: app_config.rs  config.rs  daemon.rs  disks.rs  filepicker.rs  i18n.rs  main.rs  notify.rs  rpc.rs  single_instance.rs  suspend.rs  tray.rs
ui/: main.slint
