[package]
name = "transmission-remote-slint"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "transmission-remote-slint"
path = "src/main.rs"

[dependencies]
slint        = { version = "1.7", default-features = false, features = ["std", "compat-1-2", "backend-winit", "renderer-winit-skia-opengl", "renderer-winit-skia-vulkan", "renderer-winit-software"] }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
reqwest      = { version = "0.12", features = ["json"] }
toml         = "0.8"
libc         = "0.2"
anyhow       = "1"
base64       = "0.22"
# Трей через D-Bus StatusNotifierItem — без GTK, работает в KDE/GNOME/XFCE
# blocking feature = Handle + spawn без async runtime конфликтов со Slint
notify-rust  = { version = "4", default-features = false, features = ["d"] }
zbus         = ">=4, <5"
x11rb        = { version = "0.13", features = ["allow-unsafe-code"] }
image        = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
slint-build  = "1.7"
